--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               بالعروض والخصومات التي تصل الى 50%، عروض رائعة و مستمرة على
               الشاليهات والمخيمات والمزارع والفلل والشقق.
             </p>
-            <button class="contact-btn">تواصل معنا</button>
+            <a href="#contact" class="contact-btn">تواصل معنا</a>
           </div>
 
           <!-- Bottom Offers -->
@@ -399,7 +399,7 @@
         </div>
       </div>
     </section>
-    <section class="contact-section">
+    <section class="contact-section" id="contact">
       <div class="container">
         <div class="contact-text">
           <h2>تواصل معنا</h2>
