--- a/index.html
+++ b/index.html
@@ -164,24 +164,32 @@
     <section class="about-section" id="about-us">
       <div class="container">
         <h2 class="about-title">من نحن</h2>
-        <div class="about-text">
-          <p>
-            شعور هو أكثر من مجرد تطبيق لحجز الحفلات، إنه جسر نعبر به إلى عالم من
-            الذكريات الجميلة والعواطف المشتركة.
-          </p>
-          <p>
-            رسالتنا هي خلق لحظات لا تُنسى وتوفير تجربة احتفالية فريدة لكل
-            مناسبة.
-          </p>
-          <p>
-            نحن نؤمن بأن كل مناسبة تستحق الاحتفال، وأن كل عميل هو فرد فريد يستحق
-            تجربة شخصية.
-          </p>
-          <p>
-            فريقنا يتكون من مجموعة من الخبراء في مجال التنظيم والتخطيط للأحداث،
-            بالإضافة إلى مصممين مبدعين ومبرمجين ماهرين. نحن نعمل معًا لتحويل
-            أحلامكم إلى واقع.
-          </p>
+        <div class="about-content">
+          <!-- About Us Text -->
+          <div class="about-text">
+            <p>
+              شعور هو أكثر من مجرد تطبيق لحجز الحفلات، إنه جسر نعبر به إلى عالم
+              من الذكريات الجميلة والعواطف المشتركة.
+            </p>
+            <p>
+              رسالتنا هي خلق لحظات لا تُنسى وتوفير تجربة احتفالية فريدة لكل
+              مناسبة.
+            </p>
+            <p>
+              نحن نؤمن بأن كل مناسبة تستحق الاحتفال، وأن كل عميل هو فرد فريد
+              يستحق تجربة شخصية.
+            </p>
+            <p>
+              فريقنا يتكون من مجموعة من الخبراء في مجال التنظيم والتخطيط
+              للأحداث، بالإضافة إلى مصممين مبدعين ومبرمجين ماهرين. نحن نعمل معًا
+              لتحويل أحلامكم إلى واقع.
+            </p>
+          </div>
+
+          <!-- About Us Image -->
+          <div class="about-image">
+            <img src="./imgs/social/about-us.png" alt="About Us" />
+          </div>
         </div>
       </div>
     </section>
@@ -453,40 +461,52 @@
     </section>
     <section class="contact-section" id="contact-us">
       <div class="container">
-        <div class="contact-text">
-          <h2>تواصل معنا</h2>
-          <p>
-            لأي استفسار أو مساعدة، نحن هنا لخدمتك. يمكنك التواصل معنا من خلال:
-          </p>
+        <div class="contact-content">
+          <!-- Contact Us Text -->
+          <div class="contact-text">
+            <h2>تواصل معنا</h2>
+            <p>
+              لأي استفسار أو مساعدة، نحن هنا لخدمتك. يمكنك التواصل معنا من خلال:
+            </p>
 
-          <ul class="contact-list">
-            <!-- Phone -->
-            <li>
-              <a href="tel:+201234567890" class="contact-link">
-                <i class="fa-solid fa-phone"></i> +20 123 456 7890</a
-              >
-            </li>
+            <ul class="contact-list">
+              <!-- Phone -->
+              <li>
+                <a href="tel:+201234567890" class="contact-link">
+                  <i class="fa-solid fa-phone"></i> +20 123 456 7890
+                </a>
+              </li>
 
-            <!-- WhatsApp -->
-            <li>
-              <a
-                href="https://wa.me/201234567890"
-                target="_blank"
-                class="contact-link"
-              >
-                <i class="fab fa-whatsapp"></i>
-                واتساب
-              </a>
-            </li>
+              <!-- WhatsApp -->
+              <li>
+                <a
+                  href="https://wa.me/201234567890"
+                  target="_blank"
+                  class="contact-link"
+                >
+                  <i class="fab fa-whatsapp"></i>
+                  واتساب
+                </a>
+              </li>
 
-            <!-- Email -->
-            <li>
-              <a href="mailto:info@example.com" class="contact-link">
-                <i class="fas fa-envelope"></i>
-                info@example.com</a
-              >
-            </li>
-          </ul>
+              <!-- Email -->
+              <li>
+                <a href="mailto:info@example.com" class="contact-link">
+                  <i class="fas fa-envelope"></i>
+                  info@example.com
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Contact Us Image -->
+          <div class="contact-img-wrapper">
+            <img
+              src="./imgs/social/contact-us.png"
+              alt="Contact Us"
+              class="contact-img"
+            />
+          </div>
         </div>
       </div>
     </section>
@@ -516,38 +536,9 @@
       </div>
     </footer>
 
-    <!-- Include Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <script src="./js/main.js"></script>
-    <!-- Include Swiper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper(".hero-slider", {
-        loop: true,
-        autoplay: {
-          delay: 3000,
-          disableOnInteraction: false,
-        },
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-      });
-      document
-        .querySelectorAll(".scroll-imgs-container .swiper-container")
-        .forEach((container) => {
-          new Swiper(container, {
-            direction: "vertical",
-            slidesPerView: "auto", // Auto height for slides
-            spaceBetween: 20,
-            freeMode: true, // Allows smooth scrolling
-          });
-        });
-    </script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
