compressed app images

--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@
     <section class="mobile-app-section" id="mobile-app">
       <div class="container">
         <div class="mobile-app-content">
-          <img src="./imgs/mobile-app.svg" class="mobile-app-bg mobile-big" />
+          <img src="./imgs/mobile-app.jpg" class="mobile-app-bg mobile-big" />
           <img
-            src="./imgs/mobile-app-small.svg"
+            src="./imgs/mobile-app-small.jpg"
             class="mobile-app-bg mobile-small"
           />
           <div class="floating-mobile">
