changed meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -19,49 +20,47 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
 
-    <title>شعور | تأجير شاليهات، استراحات، وشقق</title>
+    <title>شعور | تنظيم حفلات المناسبات الخاصة والمميزة</title>
 
-    <!-- Description Meta Tag -->
     <meta
       name="description"
-      content="شعور تقدم لك أفضل عروض تأجير الشاليهات، الاستراحات، والشقق في أماكن مميزة. استمتع بإقامتك مع خيارات متعددة تلبي احتياجاتك بأسعار مناسبة وخدمات متميزة."
+      content="شعور يقدم خدمات تنظيم حفلات تناسب كافة المناسبات الخاصة، من حفلات الذكرى والزواج، إلى أعياد ميلاد الأطفال والمواليد. احجزوا لحظاتكم المميزة مع فريق من المحترفين."
     />
 
-    <!-- Keywords Meta Tag -->
     <meta
       name="keywords"
-      content="شعور, تأجير شاليهات, استراحات, شقق, إقامة, عطلات, استجمام, شاليهات مصر, استراحات مصر, شقق للايجار, سكن"
+      content="شعور, تنظيم حفلات, مناسبات خاصة, حفلات ذكرى الزواج, أعياد ميلاد, استقبال مولود, حفلات مصر, تنظيم مناسبات, مناسبات فريدة"
     />
 
-    <!-- Author Meta Tag -->
     <meta name="author" content="شعور" />
 
-    <!-- Open Graph Metadata for social media sharing -->
-    <meta property="og:title" content="شعور | تأجير شاليهات، استراحات، وشقق" />
+    <meta
+      property="og:title"
+      content="شعور | تنظيم حفلات المناسبات الخاصة والمميزة"
+    />
     <meta
       property="og:description"
-      content="استمتع بإقامة فاخرة مع شعور. تأجير الشاليهات، الاستراحات، والشقق بأسعار مناسبة وخدمات مميزة."
+      content="تنظيم مثالي لمناسباتكم الخاصة: حفلات الزواج، الذكرى، وأعياد الميلاد مع شعور. خدمات متنوعة وتجارب احتفالية تبقى بذاكرتكم."
     />
     <meta property="og:image" content="https://shueur.com/imgs/logo.png" />
     <meta property="og:url" content="https://shueur.com" />
     <meta property="og:type" content="website" />
 
-    <!-- Twitter Card Metadata -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="شعور | تأجير شاليهات، استراحات، وشقق" />
+    <meta
+      name="twitter:title"
+      content="شعور | تنظيم حفلات المناسبات الخاصة والمميزة"
+    />
     <meta
       name="twitter:description"
-      content="استمتع بإقامة فاخرة مع شعور. تأجير الشاليهات، الاستراحات، والشقق بأسعار مناسبة وخدمات مميزة."
+      content="احجزوا لحظاتكم الخاصة مع شعور. حفلات للذكرى، الزواج، وأعياد الميلاد مع فريق محترف وتجربة احتفالية فريدة."
     />
     <meta name="twitter:image" content="https://shueur.com/imgs/logo.png" />
 
-    <!-- Canonical URL -->
     <link rel="canonical" href="https://shueur.com" />
 
-    <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow" />
 
-    <!-- Favicon -->
     <link rel="icon" href="./imgs/logo.png" />
   </head>
   <body>
@@ -70,7 +69,11 @@
         <div class="loading-indicator"></div>
       </div>
     </div>
-    <img src="./imgs/logo.png" alt="Logo" class="loader-logo" />
+    <img
+      src="./imgs/logo.png"
+      alt="لوجو شعور (فريق تنظيم حفلات ومناسبات)"
+      class="loader-logo"
+    />
     <!-- Hero Section with Swiper Slider -->
     <div class="static-div"></div>
     <header class="moving-div">
@@ -112,56 +115,63 @@
       <!-- Swiper Slider -->
       <div class="swiper-container hero-slider">
         <div class="swiper-wrapper">
-          <!-- Slider Images -->
+          <!-- Slide for Birthday Party Planning -->
           <div class="swiper-slide">
             <img
               src="./imgs/hero/slider-1.jfif"
-              alt="Slider Image 1"
+              alt="شعور | تنظيم حفلات أعياد الميلاد بجودة عالية"
               class="big-screen-img"
             />
             <img
               src="./imgs/hero/mobile-slider-1.jfif"
-              alt="Slider Image 1"
+              alt="شعور | تنظيم حفلات أعياد الميلاد بجودة عالية"
               class="small-screen-img"
             />
           </div>
+
+          <!-- Slide for Newborn Celebration Planning -->
           <div class="swiper-slide">
             <img
               src="./imgs/hero/slider-2.jfif"
-              alt="Slider Image 2"
+              alt="شعور | حفلات استقبال المواليد الجديدة بلمسة خاصة"
               class="big-screen-img"
             />
             <img
               src="./imgs/hero/mobile-slider-2.jfif"
-              alt="Slider Image 2"
+              alt="شعور | حفلات استقبال المواليد الجديدة بلمسة خاصة"
               class="small-screen-img"
             />
           </div>
+
+          <!-- Slide for Pregnancy Announcement -->
           <div class="swiper-slide">
             <img
               src="./imgs/hero/slider-3.jfif"
-              alt="Slider Image 3"
+              alt="شعور | فاجئي زوجك بإعلان حمل جديد بأسلوب فريد"
               class="big-screen-img"
             />
             <img
               src="./imgs/hero/mobile-slider-3.jfif"
-              alt="Slider Image 3"
+              alt="شعور | فاجئي زوجك بإعلان حمل جديد بأسلوب فريد"
               class="small-screen-img"
             />
           </div>
+
+          <!-- Slide for Wedding Anniversary Celebration -->
           <div class="swiper-slide">
             <img
               src="./imgs/hero/slider-4.jfif"
-              alt="Slider Image 4"
+              alt="شعور | تنظيم حفلات ذكرى الزواج بأسلوب مميز وفاخر"
               class="big-screen-img"
             />
             <img
               src="./imgs/hero/mobile-slider-4.jfif"
-              alt="Slider Image 4"
+              alt="شعور | تنظيم حفلات ذكرى الزواج بأسلوب مميز وفاخر"
               class="small-screen-img"
             />
           </div>
         </div>
+
         <div class="container">
           <div class="swiper-pagination"></div>
         </div>
@@ -194,7 +204,10 @@
 
           <!-- About Us Image -->
           <div class="about-image">
-            <img src="./imgs/social/about-us.png" alt="About Us" />
+            <img
+              src="./imgs/social/about-us.png"
+              alt="نبذة عن فريق شعور لتنظيم المناسبات والاحتفالات"
+            />
           </div>
         </div>
       </div>
@@ -212,7 +225,7 @@
                     <div class="img-container">
                       <img
                         src="./imgs/offers/offers-1-group-1.png"
-                        alt="Offer Image 1"
+                        alt="عروض مميزة لتنظيم حفلات عيد الميلاد"
                         class="offers-img"
                       />
                     </div>
@@ -221,7 +234,7 @@
                     <div class="img-container">
                       <img
                         src="./imgs/offers/offers-2-group-1.png"
-                        alt="Offer Image 2"
+                        alt="تخفيضات على تنظيم حفلات استقبال المواليد"
                         class="offers-img"
                       />
                     </div>
@@ -229,8 +242,8 @@
                   <div class="swiper-slide">
                     <div class="img-container">
                       <img
-                        src="./imgs/offers/offers-2-group-1.png"
-                        alt="Offer Image 3"
+                        src="./imgs/offers/offers-3-group-1.png"
+                        alt="تنظيم حفلات ذكرى الزواج بأسعار تنافسية"
                         class="offers-img"
                       />
                     </div>
@@ -245,7 +258,7 @@
                     <div class="img-container">
                       <img
                         src="./imgs/offers/offers-1-group-2.png"
-                        alt="Offer Image 1"
+                        alt="عروض خاصة لحفلات التخرج"
                         class="offers-img"
                       />
                     </div>
@@ -254,7 +267,7 @@
                     <div class="img-container">
                       <img
                         src="./imgs/offers/offers-2-group-2.png"
-                        alt="Offer Image 2"
+                        alt="خصومات على تنظيم حفلات الأطفال"
                         class="offers-img"
                       />
                     </div>
@@ -262,8 +275,8 @@
                   <div class="swiper-slide">
                     <div class="img-container">
                       <img
-                        src="./imgs/offers/offers-2-group-2.png"
-                        alt="Offer Image 3"
+                        src="./imgs/offers/offers-3-group-2.png"
+                        alt="تخفيضات مميزة على حفلات الخطوبة والزفاف"
                         class="offers-img"
                       />
                     </div>
@@ -279,8 +292,8 @@
             <h3>اللحظة الأخيرة</h3>
             <p>
               من الجَمْعة الدافئة مع الأهل، إلى صحبة الأصدقاء الحلوة، استمتعوا
-              بالعروض والخصومات التي تصل الى 50%، عروض رائعة و مستمرة على
-              الشاليهات والمخيمات والمزارع والفلل والشقق.
+              بالعروض والخصومات التي تصل الى 50%، عروض رائعة ومستمرة على حفلات
+              عيد الميلاد، التخرج، والزفاف.
             </p>
             <a href="#contact-us" class="contact-btn">تواصل معنا</a>
           </div>
@@ -294,7 +307,7 @@
                     <div class="img-container">
                       <img
                         src="./imgs/offers/offers-1-group-3.png"
-                        alt="Offer Image 1"
+                        alt="تنظيم حفلات توديع العزوبية بأسعار تنافسية"
                         class="offers-img"
                       />
                     </div>
@@ -303,7 +316,7 @@
                     <div class="img-container">
                       <img
                         src="./imgs/offers/offers-2-group-3.png"
-                        alt="Offer Image 2"
+                        alt="خصومات حصرية على حفلات المناسبات الخاصة"
                         class="offers-img"
                       />
                     </div>
@@ -311,8 +324,8 @@
                   <div class="swiper-slide">
                     <div class="img-container">
                       <img
-                        src="./imgs/offers/offers-2-group-3.png"
-                        alt="Offer Image 3"
+                        src="./imgs/offers/offers-3-group-3.png"
+                        alt="عروض مميزة لحفلات الأطفال العائلية"
                         class="offers-img"
                       />
                     </div>
@@ -327,7 +340,7 @@
                     <div class="img-container">
                       <img
                         src="./imgs/offers/offers-1-group-4.png"
-                        alt="Offer Image 1"
+                        alt="تنظيم حفلات مميزة للذكرى السنوية"
                         class="offers-img"
                       />
                     </div>
@@ -336,7 +349,7 @@
                     <div class="img-container">
                       <img
                         src="./imgs/offers/offers-2-group-4.png"
-                        alt="Offer Image 2"
+                        alt="عروض على حفلات بمناسبات عائلية"
                         class="offers-img"
                       />
                     </div>
@@ -344,8 +357,8 @@
                   <div class="swiper-slide">
                     <div class="img-container">
                       <img
-                        src="./imgs/offers/offers-2-group-4.png"
-                        alt="Offer Image 3"
+                        src="./imgs/offers/offers-3-group-4.png"
+                        alt="حفلات خطوبة وزفاف بخصومات مذهلة"
                         class="offers-img"
                       />
                     </div>
@@ -357,6 +370,7 @@
         </div>
       </div>
     </section>
+
     <section class="service" id="services">
       <div class="container">
         <div class="service-section">
@@ -431,8 +445,8 @@
           </div>
           <div class="service-image-container">
             <img
-              src="./imgs/service-img.png"
-              alt="services Image"
+              src="./imgs/service-img.webp"
+              alt="خدمات شعور للحجز الفوري وخدمة العملاء وطرق الدفع الآمنة"
               class="service-image"
             />
           </div>
