changed service and offers text

--- a/index.html
+++ b/index.html
@@ -375,20 +375,22 @@
       <div class="container">
         <div class="service-section">
           <div class="service-content">
-            <h2 class="service-title">وش نوفر لك؟</h2>
+            <h2 class="service-title">ما الذي نقدمه لك؟</h2>
             <h3 class="service-subtitle">
-              دعنا نساعدك في ايجاد التجربة التي تبحث عنها!
+              دعنا نساعدك في تنظيم أفضل الحفلات والفعاليات!
             </h3>
 
             <!-- List of Items -->
             <div class="service-items-grid">
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="fa-solid fa-magnifying-glass"></i>
+                  <i class="fa-solid fa-calendar-check"></i>
                 </div>
                 <div class="service-item-text">
-                  <h4 class="item-title">حجز بيتك حجز فوري و مضمون</h4>
-                  <p class="item-subtitle">حجزك مضمون بنسبة ١٠٠٪</p>
+                  <h4 class="item-title">حجز فوري للأحداث</h4>
+                  <p class="item-subtitle">
+                    سهولة الحجز لمختلف الفعاليات والحفلات
+                  </p>
                 </div>
               </div>
 
@@ -397,62 +399,75 @@
                   <i class="fa-regular fa-credit-card"></i>
                 </div>
                 <div class="service-item-text">
-                  <h4 class="item-title">طرق دفع آمنة</h4>
-                  <p class="item-subtitle">وسائل دفع متعددة وآمنة</p>
+                  <h4 class="item-title">طرق دفع آمنة ومتعددة</h4>
+                  <p class="item-subtitle">
+                    ندعم جميع وسائل الدفع الإلكتروني الموثوقة
+                  </p>
                 </div>
               </div>
 
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="fa-solid fa-headphones"></i>
+                  <i class="fa-solid fa-headset"></i>
                 </div>
                 <div class="service-item-text">
-                  <h4 class="item-title">خدمة عملاء</h4>
-                  <p class="item-subtitle">ندعمك على مدار الأسبوع</p>
+                  <h4 class="item-title">دعم عملاء 24/7</h4>
+                  <p class="item-subtitle">
+                    فريق دعم متاح على مدار الساعة لضمان راحتك
+                  </p>
                 </div>
               </div>
 
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="fa-regular fa-thumbs-up"></i>
+                  <i class="fa-solid fa-star"></i>
                 </div>
                 <div class="service-item-text">
-                  <h4 class="item-title">تقييمات موثوقة</h4>
-                  <p class="item-subtitle">تقييمات وتعليقات مصدقة</p>
+                  <h4 class="item-title">تقييمات موثوقة من العملاء</h4>
+                  <p class="item-subtitle">
+                    مراجعات وتعليقات من مستخدمينا الحقيقيين
+                  </p>
                 </div>
               </div>
 
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="fa-solid fa-check"></i>
+                  <i class="fa-solid fa-search"></i>
                 </div>
                 <div class="service-item-text">
-                  <h4 class="item-title">بحث متقدم وذكي</h4>
-                  <p class="item-subtitle">كل أنواع البحث بين يديك</p>
+                  <h4 class="item-title">بحث متقدم عن الخدمات</h4>
+                  <p class="item-subtitle">
+                    ابحث عن أفضل الأماكن والخدمات المناسبة لحفلتك
+                  </p>
                 </div>
               </div>
 
               <div class="service-item">
                 <div class="service-icon">
-                  <i class="fa-regular fa-images"></i>
+                  <i class="fa-solid fa-images"></i>
                 </div>
                 <div class="service-item-text">
-                  <h4 class="item-title">صور وفيديوهات</h4>
-                  <p class="item-subtitle">شاهد من مكانك صور تحاكي الواقع</p>
+                  <h4 class="item-title">صور وفيديوهات احترافية</h4>
+                  <p class="item-subtitle">
+                    اطلع على صور وفيديوهات احتفالات سابقة
+                  </p>
                 </div>
               </div>
             </div>
           </div>
+
+          <!-- Service Image -->
           <div class="service-image-container">
             <img
               src="./imgs/service-img.webp"
-              alt="خدمات شعور للحجز الفوري وخدمة العملاء وطرق الدفع الآمنة"
+              alt="خدمات شعور لتنظيم الحفلات وخدمة العملاء وطرق الدفع الآمنة"
               class="service-image"
             />
           </div>
         </div>
       </div>
     </section>
+
     <section class="mobile-app-section" id="mobile-app">
       <div class="container">
         <div class="mobile-app-content">
