--- a/index.html
+++ b/index.html
@@ -483,14 +483,16 @@
                 <h5>عيش كل التجربة ، من جوالك</h5>
               </div>
               <div class="app-links">
-                <a
+                <!-- <a
                   href="https://app.adjust.com/89pzesj?label=Android&amp;engagement_type=fallback_click&amp;fallback=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.max.gathernClient"
                   ><img src="./imgs/googleplay.svg"
                 /></a>
                 <a
                   href="https://app.adjust.com/rch8tzu?label=IOS&amp;engagement_type=fallback_click&amp;fallback=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fgathern-%25D8%25AC%25D8%25A7%25D8%25B0%25D8%25B1-%25D8%25A5%25D9%2586%2Fid1226060828"
                   ><img src="./imgs/appstore.svg"
-                /></a>
+                /></a> -->
+                <a><img src="./imgs/googleplay.svg" /></a>
+                <a><img src="./imgs/appstore.svg" /></a>
               </div>
             </div>
             <div class="mobile-app-img">
